# rust_query_example

./: Cargo.toml  Dockerfile  compose.yaml  readme.md
db/: schema.sql
src/: dataframe_generator.rs  main.rs
