[package]
name = "rust_query_example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = "0.3.31"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }


